# data_extractor

./: main.py  pyproject.toml
data/notebook/: AdvPortfolioPython.ipynb  PortfolioPython.ipynb
extractor/: notebook_extractor.py  pdf_extractor.py
test/: test_file_utils.py  test_notebook_extractor.py  test_pdf_extractor.py  test_text_formatter.py
utils/: file_utils.py  text_formatter.py
